#266 - Fixed click to download text dash and spacing

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -969,7 +969,11 @@ span.dashicons.dashicons-admin-file:before {
 				}
 
 				.document-description {
-					margin-right: 8px;
+					margin-right: 6px;
+				}
+
+				.document-helper-text-inner {
+					margin-left: 3px;
 				}
 
 				.document-extension-description {
